[tool.poetry]
name = "sfn"
version = "1"
description = "scpfoundation.net rating parser"
authors = ["mb6ockatf <mdddmmmm@yandex.ru>"]
license = "AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
